build_result_final_7.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\utils\ExportUtils.java:385: error: reference to Color is ambiguous
        paint.setColor(Color.parseColor("#94A3B8"));
                       ^
  both interface org.apache.poi.ss.usermodel.Color in org.apache.poi.ss.usermodel and class android.graphics.Color in android.graphics match
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/Pankaj/AndroidStudioProjects/MyCashBook/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\utils\ExportUtils.java:385: error: reference to Color is ambiguous
          paint.setColor(Color.parseColor("#94A3B8"));
                         ^
    both interface org.apache.poi.ss.usermodel.Color in org.apache.poi.ss.usermodel and class android.graphics.Color in android.graphics match
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 946ms
17 actionable tasks: 1 executed, 16 up-to-date
